Resources/Css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Gothic A1", sans-serif;
    color: rgb(0, 0, 0);
    font-size: 16px;
}


body {
    background: linear-gradient(to bottom, hsl(100, 100%, 93%), hsl(100, 100%, 90%), hsl(100, 100%, 93%));
}

.fullscreen-nav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    overflow-x: hidden;
    transition: 1s;
    margin-top: -1.1rem;
}



.fullscreen-nav .nav-links {
    position: fixed;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    text-align: center;
    margin-top: 0;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
}

.fullscreen-nav .nav-links a {
    padding: 10px;
    text-decoration: none;
    font-size: 4rem;
    display: block;
    transition: 0.3s;
    color: rgb(0, 0, 0);

}

.fullscreen-nav .nav-links a:hover,
.fullscreen-nav .nav-links a:focus {
    color: #4e4e4e;
}

.fullscreen-nav {
    top: 17.5px;
    right: 30px;
    font-size: 50px;
    cursor: pointer;
    color: rgb(0, 0, 0);
    text-decoration: none;

}

.hamburger {
    cursor: pointer;
    width: 35px;
    height: 30px;
    display: flex;
    margin-left: 77rem;
    margin-top: -14.5rem;
    flex-direction: column;
    justify-content: space-between;
    z-index: 1001;
    position: fixed;
    color: hsl(0, 0%, 18%);
}

.hamburger div {
    height: 5px;
    background: #222;
    border-radius: 2px;
    transition: 0.4s;
}

.hamburger.active .bar1 {
    transform: rotate(45deg) translate(4px, 10px);
    width: 38px;
}

.hamburger.active .bar2 {
    opacity: 0;
}

.hamburger.active .bar3 {
    transform: rotate(-45deg) translate(5px, -16px);
    width: 38px;
}

@media screen and (max-height: 450px) {
    .fullscreen-nav .nav-links {
        top: 10%;
    }

    .fullscreen-nav .nav-links li {
        font-size: 20px;
    }
}

header {
    padding: 20px 0;
    margin-left: 30vh;
    margin-top: 30vh;
    margin-bottom: 53vh;
    text-decoration: none;
    list-style-type: none;
}

.header-main-title {
    font-size: 5rem;
    font-family: "Gothic A1", sans-serif;
    font-weight: 900;
    margin-left: -10vw;
    width: 60vw;
    margin-top: -10vh;
}

.header-subtitle {
    margin-bottom: 3vw;
    font-size: 3.5vh;
    margin-left: -10vw;

}

.header-image {
    width: 33.33vw;
    height: 100vh;
    margin-left: 100vh;
    margin-top: -32.6vh;
    margin-bottom: -27.5vw;
}

.projects-button {
    display: inline-block;
    padding: 14px 32px;
    font-size: 1.1rem;
    font-family: "Gothic A1", sans-serif;
    color: #fff;
    background: linear-gradient(90deg, hsl(120, 50%, 50%) 0%, hsl(110 60%, 40%) 100%);
    border: none;
    border-radius: 30px;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    height: 3.5vw;
    width: 12rem;
    padding-left: 2rem;
    padding-right: 1.6vh;
    margin-bottom: -2.55vw;
    padding-bottom: -1vw;
    padding-top: 1vw;
    margin-top: -3vw;
    margin-left: 15vh;
}

.projects-button::after {
    content: "";
    position: absolute;
    left: -75%;
    top: 0;
    width: 1275%;
    height: 100%;
    transform: skewX(-20deg);
}

.projects-button:hover {
    transform: scale(1.04);
}


.contact-button {
    display: inline-block;
    padding: 14px 32px;
    font-size: 1.1rem;
    font-family: "Gothic A1", sans-serif;
    color: #fff;
    background: linear-gradient(90deg, hsl(120, 50%, 50%) 0%, hsl(110 60%, 40%) 100%);
    border: none;
    border-radius: 30px;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    height: 3.5vw;
    width: 10.2rem;
    padding-left: 2rem;
    padding-right: 1.6vh;
    margin-bottom: -2.55vw;
    padding-bottom: -1vw;
    padding-top: 1vw;
    margin-top: -3vw;
    margin-left: -1vh;
}

.contact-button::after {
    content: "";
    position: absolute;
    left: -75%;
    top: 0;
    width: 1275%;
    height: 100%;
}

.contact-button:hover {
    transform: scale(1.04);
}




.about-image {
    width: 33vw;
    margin-left: -50vh;
    margin-top: -70vh;
}
.about-section {
    margin-bottom: -70vw;
    margin-top: 10vh;
    margin-left: 50vh;
}
.about-section-title {
    font-family: "Gothic A1", sans-serif;
    font-weight: 900;
    text-align: center;
    margin-bottom: 4vh;
    border: rgb(120, 120, 120) 2px solid;
    border-radius: 2.5vh;
    width: 5vw;
    padding-left: 2vh;
    padding-right: 4.6vw;
    margin-left: 40vw;
    padding-top: 0.2vh;
    padding-bottom: 0.2vh;
}

.about-main-info {
    font-family: "Gothic A1", sans-serif;
    font-weight: 900;
    margin-left: 15vw;
}

.about-short-description {
    margin-left: 27vh;
    margin-bottom: 10vh;
}

.about-background {
    border-radius: 1vh;
    border: 3px solid hsl(0, 0%, 33%);
    width: 76vh;
    height: 27vh;
    margin-left: 23vh;
    margin-bottom: 10vh;
    padding-left: 1vh;
    padding-top: 2.5vh;
}

.about-background-title {
    font-size: 2rem;
    margin-bottom: 2.5vh;
    font-weight: 900;
}

.about-background-paragraph {

    width: 60vh;
    padding-left: 2vh;
    height: 20vh;
    margin-left: 1vh;
    margin-bottom: -10vh;
    margin-top: -4.25vh;
    padding-top: 2.5vh;
}

.about-skillstack {
    border-radius: 1vh;
    border: 2px solid hsl(0, 0%, 33%);
    width: 45vh;
    height: 20vh;
    margin-left: 100vh;
    margin-bottom: 10vh;
    margin-top: -37vh;
    padding-left: 2vh;
    padding-top: 2.5vh;
    display: flexbox;

}

.skillstack-title {
    font-size: 1.25rem;
    margin-bottom: 2.5vh;
    font-weight: 900;
}

.skillstack {
    gap: 1vh;
}

.skill-python {
    border-radius: 1vh;
    border: 2px solid hsl(0, 0%, 33%);
    width: 5.8rem;
    height: 2vw;
    padding-left: 12px;
    padding-top: 2px;
    margin-bottom: 5px;
    margin-top: -5px;
}

.skill-javascript {
    border-radius: 1vh;
    border: 2px solid hsl(0, 0%, 33%);
    width: 8.15vw;
    padding-left: 12px;
    padding-top: 2px;
    margin-bottom: 5px;

}

.skill-html {
    border-radius: 1vh;
    border: 2px solid hsl(0, 0%, 33%);
    width: 4.7rem;
    padding-left: 12px;
    padding-top: 2px;
    padding-right: 2px;
    margin-left: 7rem;
    margin-top: -4.35rem;
    margin-bottom: 0.3rem;
}

.skill-css {
    border-radius: 1vh;
    border: 2px solid hsl(0, 0%, 33%);
    width: 4vw;
    padding-left: 12px;
    padding-top: 2px;
    margin-left: 9rem;
    margin-bottom: -0.3rem;
}

.skill-blender {
    border-radius: 1vh;
    border: 2px solid hsl(0, 0%, 33%);
    width: 6.5vw;
    padding-left: 12px;
    padding-top: 2px;
    padding-right: 4px;
    margin-left: 13rem;
    margin-top: -4rem;
    margin-bottom: 0.3rem;
}

.skill-ai {
    border-radius: 1vh;
    border: 2px solid hsl(0, 0%, 33%);
    width: 3.15vw;
    max-width: 7vw;
    padding-left: 12px;
    padding-top: 2px;
    margin-left: 14rem;
    margin-bottom: -0.5rem;

}


h1 {
    position: relative;
    font-size: 5rem;
    font-family: "Gothic A1", sans-serif;
    font-weight: 900;
}

h2 {
    font-size: 3rem;
}

h3 {
    font-size: 1.25rem;
}

